--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Topic :: Security :: Cryptography
+
 [options]
 packages = find:
 python_requires = >=3.7
@@ -23,3 +24,7 @@ install_requires =
 [options.entry_points]
 console_scripts =
     myvault = MyVault.cli:commands
+
+[flake8]
+max-line-length = 120
+extend-ignore = E203
