--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,9 @@ repos:
     rev: v0.812
     hooks:
       - id: mypy
+  - repo: https://github.com/sqlfluff/sqlfluff
+    rev: 0.6.4
+    hooks:
+      - id: sqlfluff-fix
+        name: sqlfluff
+        entry: sqlfluff fix --force
